Fix horizontal scroll

--- a/app/components/App/index.less
+++ b/app/components/App/index.less
@@ -7,8 +7,9 @@
 
 .root {
   padding-right: 8px;
-  width: 500px;
   min-height: 300px;
+  max-width: 500px;
+  min-width: 480px;
 }
 
 .content {
